Almost Ready the View

--- a/source/GradBook/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/source/GradBook/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -17,6 +17,7 @@
 		<p:menubar>
 			<p:menuitem value="#{msgs.index}" url="/index.xhtml" />
 			<p:submenu label="#{msgs.register}">
+				<p:menuitem value="#{msgs.function}" url="/function/list.xhtml" />
 				<p:menuitem value="#{msgs.pole}" url="/pole/list.xhtml" />
 				<p:menuitem value="#{msgs.course}" url="/course/list.xhtml" />
 				<p:menuitem value="#{msgs.semester}" url="/semester/list.xhtml" />
