Almost ready, it is missing just the Task View pages

--- a/source/GradBook/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/source/GradBook/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -22,7 +22,7 @@
 				<p:menuitem value="#{msgs.course}" url="/course/list.xhtml" />
 				<p:menuitem value="#{msgs.semester}" url="/semester/list.xhtml" />
 				<p:menuitem value="#{msgs.discipline}" url="/discipline/list.xhtml" />
-
+				<p:menuitem value="#{msgs.team}" url="/team/list.xhtml" />
 			</p:submenu>
 		</p:menubar>
 	</header>
