--- a/source/GradBook/src/main/webapp/WEB-INF/templates/user.xhtml
+++ b/source/GradBook/src/main/webapp/WEB-INF/templates/user.xhtml
@@ -13,8 +13,10 @@
 			<p:menuitem value="#{msgs.index}" url="/user/index.xhtml" />
 
 			<f:facet name="options">
-				<p:commandButton type="button" value="Logout" icon="ui-icon-extlink"
-					action="#{logout.efetuarLogout()}" />
+				<h:form>
+					<p:commandButton type="button" value="Logout"
+						icon="ui-icon-extlink" action="#{logout.efetuarLogout()}" />
+				</h:form>
 			</f:facet>
 
 		</p:menubar>
