--- a/source/GradBook/src/main/webapp/WEB-INF/templates/admin.xhtml
+++ b/source/GradBook/src/main/webapp/WEB-INF/templates/admin.xhtml
@@ -28,8 +28,7 @@
 			</p:submenu>
 			<f:facet name="options">
 				<p:menubar>
-					<p:menuitem value="Sair" url="/login.xhtml" icon="ui-icon-close"
-						action="#{logout.efetuarLogout}" />
+					<p:menuitem value="Sair" url="/logout" icon="ui-icon-close" />
 				</p:menubar>
 			</f:facet>
 
