--- a/source/GradBook/src/main/webapp/resources/css/main.css
+++ b/source/GradBook/src/main/webapp/resources/css/main.css
@@ -1,31 +1,3 @@
-@CHARSET "ISO-8859-1";
-
-
-.container {
-	padding-right: 15px;
-	padding-left: 15px;
-	margin-right: auto;
-	margin-left: auto;
-}
-
-@media ( min-width : 768px) {
-	.container {
-		width: 750px;
-	}
-}
-
-@media ( min-width : 992px) {
-	.container {
-		width: 970px;
-	}
-}
-
-@media ( min-width : 1200px) {
-	.container {
-		width: 1170px;
-	}
-}
-
-input {
-	width: 98%;
+.ui-g .container {
+	margin: 0 auto;
 }
