--- a/source/GradBook/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/source/GradBook/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -20,7 +20,7 @@
 				<p:menuitem value="#{msgs.index}" url="/index.xhtml" />
 
 				<f:facet name="options">
-					<p:button outcome="/login.xhtml" value="Login" icon="ui-icon-star"/>					
+					<p:button outcome="/index.xhtml" value="Login" icon="ui-icon-star"/>					
 				</f:facet>
 				
 			</p:menubar>
